added changes of irrigation system

--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -41,7 +41,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="irrigation-systems-current-3" name="irrigation-systems-current" type="checkbox" value="Ebb and flood" {{ checked("irrigation-systems-current", "Ebb and flood") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-current-3">
-                  Ebb and flood
+                  Ebb and flow
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
