made address 2  optional

--- a/app/views/current/views/water/agent-farmer-address.html
+++ b/app/views/current/views/water/agent-farmer-address.html
@@ -22,7 +22,7 @@
 
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="farmer-address2">
-                        Address 2
+                        Address 2 (optional)
                     </label>
                     <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address2" name="farmer-address2" type="farmer-address2" spellcheck="false" aria-describedby="farmer-address2-hint" autocomplete="farmer-address2" value="{{ data['farmer-address2'] }}">
                 </div>
