--- a/app/views/current/views/water/address-details.html
+++ b/app/views/current/views/water/address-details.html
@@ -23,7 +23,7 @@
 
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="other-applicant-address2">
-                        Address 2
+                        Address 2 (optional)
                     </label>
                     <input class="govuk-input govuk-!-width-two-thirds" id="other-applicant-address2" name="other-applicant-address2" type="other-applicant-address2" spellcheck="false" aria-describedby="other-applicant-address2-hint" autocomplete="other-applicant-address2" value="{{ data['other-applicant-address2'] }}">
                 </div>
@@ -65,7 +65,7 @@
 
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="farmer-address2">
-                        Address 2
+                        Address 2 (optional)
                     </label>
                     <input class="govuk-input govuk-!-width-two-thirds" id="farmer-address2" name="farmer-address2" type="farmer-address2" spellcheck="false" aria-describedby="farmer-address2-hint" autocomplete="farmer-address2" value="{{ data['farmer-address2'] }}">
                 </div>
