changed the address of address details

--- a/app/views/current/views/water/address-details.html
+++ b/app/views/current/views/water/address-details.html
@@ -54,7 +54,7 @@
                 </button>
             </form>    
               {% else %}
-             <form class="form" action="../water/consent" method="post">
+             <form class="form" action="../water/check-details" method="post">
                 <h1 class="govuk-heading-l">Farmer's address details</h1>
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="farmer-address1">
