added  form for agent-farmer-address

--- a/app/views/current/views/water/agent-farmer-address.html
+++ b/app/views/current/views/water/agent-farmer-address.html
@@ -11,7 +11,7 @@
 {% block content %}
      <div class="govuk-grid-row">
          <div class="govuk-grid-column-two-thirds">
-             <form class="form" action="../water/consent" method="post">
+             <form class="form" action="../water/check-details" method="post">
                 <h1 class="govuk-heading-l">Farmer's address details</h1>
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="farmer-address1">
