--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -6,9 +6,9 @@
 
 {% block beforeContent %}
 {% if (data['applicant'] == "Agent")%}
-  <a class="govuk-back-link" href="../water/agent-farmer-address">Back</a>
+  <a class="govuk-back-link" href="../water/check-details">Back</a>
 {%else%}
-  <a class="govuk-back-link" href="../water/address-details">Back</a>
+  <a class="govuk-back-link" href="../water/check-details">Back</a>
 {%endif%}
 {% endblock %}
 
