public-beta/refrencePage changes

--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -17,27 +17,22 @@
     </div>
    </div>
     <br>
-    <div class="govuk-body">
+    <div class="govuk-body govuk-!-padding-top-7">
       <p>You will get an email with a record of your answers.</p>
       <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
       <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
       <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
       <a href="#" class="govuk-link">Find out about call charges</a>
+      <p class="govuk-!-padding-top-5">Email :<a href="#" class="govuk-link">FTF@rpa.gov.uk </a></p> 
+      <p class="govuk-!-padding-top-3">RPA will be in touch when the full application period opens.
+      They'll tell you about the application form and any guidance you need to submit a full application.
+      </p>
     </div>
     <br>
-    <div class="govuk-body">
-      <h2 class="govuk-heading-m">Problems with the service</h2>
-      <p>If you have any problems with the service, contact the RPA.</p>
-      <p>Telephone:<strong>03000 200 301</strong></p>
-      <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
-      <a href="#" alt="Find out about call charges">Find out about call charges</a>
-      <br><br>
-      <p>Email:<a href="#" alt="email">FTF@rpa.gov.uk</a></p>
-    </div>
     <br>
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
+      <strong class="govuk-warning-text__text govuk-!-font-size-24">
         <span class="govuk-warning-text__assistive">You must not start the project</span>
         You must not start the project<br><br>
       </strong>
