--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -65,6 +65,15 @@
           Continue
         </button>
 
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
+          >
+            Back to summary page
+          </button>
+        {% endif %}
+
+
       </form>
 
     </div>
