--- a/app/views/current/views/water/tenancy-length-condition.html
+++ b/app/views/current/views/water/tenancy-length-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="tenancy-length">Back</a>
+  <a class="govuk-back-link govuk-!-margin-top-6" href="tenancy-length">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,15 +13,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
+      <h1 class="govuk-heading-l govuk-!-padding-bottom-8">
         You may be able to apply for a grant from this scheme
       </h1>
 
-      <p>You will need to extend your tenancy agreement before you can complete a full application.</p>
+      <p class="govuk-!-margin-bottom-8">You will need to extend your tenancy agreement before you can complete a full application.</p>
 
       <form id="mainForm" class="form" action="../water/project-items" method="post">
-
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='answers'"
