--- a/app/views/current/views/water/tenancy-length-condition.html
+++ b/app/views/current/views/water/tenancy-length-condition.html
@@ -20,7 +20,7 @@
       <p class="govuk-!-margin-bottom-8">You will need to extend your tenancy agreement before you can complete a full application.</p>
 
       <form id="mainForm" class="form" action="../water/project-items" method="post">
-
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='answers'"
             class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
