--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -40,13 +40,13 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="expected by 21 October 2021" {{ checked("planning-permission", "expected by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Expected to have by 31st December 2021
+                  Expected to have by 31 December 2021
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="won’t have by 21 October 2021" {{ checked("planning-permission", "won’t have by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Won't have by 31st December 2021
+                  Won't have by 31 December 2021
                 </label>
               </div>
             </div>
