change44/deleted st

--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -40,13 +40,13 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="expected by 21 October 2021" {{ checked("abstraction-licence", "expected by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
-                  Expected to have by 31st December 2021
+                  Expected to have by 31 December 2021
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="won’t have by 21 October 2021" {{ checked("abstraction-licence", "won’t have by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
-                  Won't have by 31st December 2021
+                  Won't have by 31 December 2021
                 </label>
               </div>
             </div>
