--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -55,7 +55,7 @@
         <br>
         <div class="govuk-form-group">
           <label class="govuk-label" for="sbi">
-              Single business identifier (SBI)
+              Single Business Identifier (SBI)  
           </label>
           <span id="sbi-hint" class="govuk-hint">If you do not have an SBI, leave it blank</span>
           <input class="govuk-input govuk-input--width-10" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
