updated elimination legal status page

--- a/app/views/current/views/water/legal-status-fail.html
+++ b/app/views/current/views/water/legal-status-fail.html
@@ -28,6 +28,10 @@
           <li>Public organisation</li>
           <li>Sole trader</li>
           <li>Trust</li>
+          <li>Limited partnership</li>
+          <li>Industrial and provident society</li>
+          <li>Co-operative society (Co-Op)</li>
+          <li>Community benefit society (BenCom)</li>
         </ul>
 
       <p>Other types of business may be supported in future schemes.</p>
