added new updates for legal status

--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -80,8 +80,32 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-10" name="legal-status" type="radio" value="None" {{ checked("legal-status", "None") }}>
+                <input class="govuk-radios__input" id="legal-status-10" name="legal-status" type="radio" value="Limited partnership" {{ checked("legal-status", "Limited partnership") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-10">
+                  Limited partnership
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-11" name="legal-status" type="radio" value="Industrial and provident society" {{ checked("legal-status", "Industrial and provident society") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-11">
+                  Industrial and provident society 
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-12" name="legal-status" type="radio" value="Co-operative society" {{ checked("legal-status", "Co-operative society") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-12">
+                  Co-operative society (Co-Op) 
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-13" name="legal-status" type="radio" value="Community benefit society" {{ checked("legal-status", "Community benefit society") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-13">
+                  Community benefit society (BenCom) 
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="legal-status-14" name="legal-status" type="radio" value="None" {{ checked("legal-status", "None") }}>
+                <label class="govuk-label govuk-radios__label" for="legal-status-14">
                    None of the above
                 </label>
               </div>
@@ -104,6 +128,10 @@
                       <li>Limited liability partnership</li>
                       <li>Community interest company  </li>
                       <li>Local authority </li>
+                      <li>Limited partnership</li>
+                      <li>Industrial and provident society</li>
+                      <li>Co-operative society (Co-Op)</li>
+                      <li>Community benefit society (BenCom)</li>
                     </ul>
                 </div>
               </details>
