added bussiness name for agent details

--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -30,6 +30,14 @@
           <input class="govuk-input govuk-!-width-one-half" id="other-applicant-lastname" name="other-applicant-lastname" type="text" spellcheck="false" autocomplete="name" value="{{ data['other-applicant-lastname'] }}">
         </div>
 
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="other-applicant-Business-name">
+            Business name
+          </label>
+          <input class="govuk-input govuk-!-width-one-half" id="other-applicant-Business-name" name="other-applicant-Business-name" type="text" spellcheck="false" autocomplete="name" value="{{ data['other-applicant-Business-name'] }}">
+        </div>
+
+
          <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="agent-email">
