--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -26,7 +26,7 @@
           <div class="govuk-checkboxes__item govuk-!-margin-top-7">
             <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="carcasses">
             <label class="govuk-label govuk-checkboxes__label govuk-!-padding-bottom-5" for="confirm">
-              I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application  
+              I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. 
             </label>
           </div>
            <div class="govuk-checkboxes__item govuk-!-margin-top-4">
