--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -43,14 +43,14 @@
 		
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="agent-landline">
-                        Preferred contact number 
+                        Mobile number  
                     </label>
                     <input class="govuk-input  govuk-!-width-two-thirds" id="agent-landline" name="agent-landline" type="agent-landline" spellcheck="false" aria-describedby="agent-landline-hint" autocomplete="agent-landline" value="{{ data['agent-landline'] }}">
                 </div>
 
                 <div class="govuk-form-group">
                     <label class="govuk-label" for="agent-mobile">
-                        Additional contact number (optional)
+                        Landline number
                     </label>
                     <input class="govuk-input  govuk-!-width-two-thirds" id="agent-mobile" name="agent-mobile" type="agent-mobile" spellcheck="false" aria-describedby="agent-mobile-hint" autocomplete="agent-mobile" value="{{ data['agent-mobile'] }}">
                  </div>
