added table of agent

--- a/app/views/current/views/water/check-details.html
+++ b/app/views/current/views/water/check-details.html
@@ -73,6 +73,69 @@
                 </dl>
                 <hr>
                 <br><br><br>
+                {# Agent details #}
+                <table class="govuk-table">
+                    <thead class="govuk-table__head">
+                        <tr class="govuk-table__row">
+                                <h1 class="govuk-!-font-size-24"><strong> Agent's details</strong></h1>
+                        </tr>
+                        <hr>
+                    </thead>
+                    <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row--no-border">
+                            <th  scope="row" class="govuk-table__header">
+                                <strong>Name</strong>
+                            </th>
+                            <td class="govuk-table__cell">
+                                <p>Arlo Smith</p>
+                            </td>
+                            <td class="govuk-table__cell">
+                                <a class="govuk-link" href="#nowhere">
+                                    Change<span class="govuk-visually-hidden">business details</span>
+                                </a>
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row--no-border">
+                            <th  scope="row" class="govuk-table__header">
+                                <strong>Name</strong>
+                            </th>
+                            <td class="govuk-table__cell">
+                                <p>Arlo Smith</p>
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th  scope="row" class="govuk-table__header">
+                                <strong>Home address</strong>
+                            </th>
+                            <td class="govuk-table__cell">
+                                <p>House No, Address first line</p>
+                                <p>Address second line</p>
+                                <p>GU22 9HG</p>
+                            </td>
+                            <td class="govuk-table__cell">
+                                <a class="govuk-link" href="#nowhere">
+                                    Change<span class="govuk-visually-hidden">Home address</span>
+                                </a>
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th  scope="row" class="govuk-table__header">
+                                <strong> Contact datails</strong>
+                            </th>
+                            <td class="govuk-table__cell">
+                                <p>Johns@email.com</p>
+                                <p>07896567516</p>
+                            </td>
+                            <td class="govuk-table__cell">
+                                <a class="govuk-link" href="#nowhere">
+                                    Change<span class="govuk-visually-hidden">Contact datails</span>
+                                </a>
+                            </td>
+                        </tr>
+                       
+                    </tbody>
+                </table>
+                <br><br>
                 {#Farmer details #}
                 <table class="govuk-table">
                     <thead class="govuk-table__head">
