new changes of large-water page

--- a/app/views/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/current/views/layouts/GUIDANCEWATER.html
@@ -50,11 +50,11 @@ Large grants for water resource management projects - GOV.UK
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund water resource management grant
+        Farming Transformation Fund water grant
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">This grant is to make more efficient use of water for irrigation and secure water supplies for crops.</p>
+    <p class="gem-c-lead-paragraph">This grant is to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
 
   </div>
 </div>
