large-water added link at the bottom

--- a/app/views/current/views/guidance/large-water.html
+++ b/app/views/current/views/guidance/large-water.html
@@ -69,6 +69,9 @@
 
 <h3>Submit a full application</h3>
 <p>If you submit a full application and it is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
+
+<a href="../water/start" class="govuk-heading-s govuk-!-padding-top-7">Check if you can apply and how well your project fits the funding priorities.</a>
+
 </div>
 <br/>
 
