change 57 - farming-type-fail changes

--- a/app/views/current/views/water/farming-type-fail.html
+++ b/app/views/current/views/water/farming-type-fail.html
@@ -10,17 +10,19 @@
 
 {% block content %}
 
+<div class="gov-body">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      <h1 class="govuk-heading-l">
-        You cannot apply for a grant from this scheme
-      </h1>
-
-      <p>This is only available to arable and horticultural farming businesses that supply the food industry, nurseries growing flowers or forestry nurseries.</p>
-
-      <!--See <a href="">the large countryside productivity grant guidance</a> for further information.-->
-
+        <h1 class="govuk-heading-l">
+          This grant is only available to:   
+        </h1>
+        <ul class="govuk-!-font-size-24">
+          <li>arable and horticultural farming businesses that supply the food industry</li>
+          <li>nurseries growing flowers</li>
+          <li>forestry nurseries</li>
+        </ul>
+        <a href="" class="govuk-!-font-size-24"> See other grants you may be eligible for.</a>
+      </div>
     </div>
   </div>
 
