added space for eligibility country page

--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -55,7 +55,8 @@
                     </span>
                 </summary>
                 <div class="govuk-details__text">
-                    This is only for projects in England. 
+                    <p>This is only for projects in England.</p>
+                    
                     <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
                 </div>
               </details>
