change60/Start elimination page

--- a/app/views/current/views/water/project-start-fail.html
+++ b/app/views/current/views/water/project-start-fail.html
@@ -14,10 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">
-        You cannot apply for a grant from this scheme
+        You cannot apply for a grant if you have already started work on the project.
       </h1>
 
-      <p>Only projects that have not yet started can apply for a grant.</p>
+      <p>Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement invalidates your application.</p>
 
       <!--<p>To view what activities count towards a project that has been started, see <a href="">the large countryside productivity grant guidance</a>.</p>-->
 
