--- a/app/views/current/views/water/project-cost-fail.html
+++ b/app/views/current/views/water/project-cost-fail.html
@@ -13,12 +13,12 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
      <h1 class="govuk-heading-l">
-        You cannot apply for a large grant from this scheme
+        You cannot apply for a grant from this scheme
      </h1>
 
     <div class="govuk-inset-text">
       <p>You can only apply for a grant of up to 40% of the estimated costs.</p>
-      <p>The minimum grant you can apply for is £35,000(40% of £87,500).</p>
+      <p>The minimum grant you can apply for is £35,000 (40% of £87,500).</p>
       <p>The maximum grant is £1 million.</p>
     </div>
       
