--- a/app/views/current/views/water/remaining-costs-fail.html
+++ b/app/views/current/views/water/remaining-costs-fail.html
@@ -17,9 +17,9 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.
-        You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.
-      </p>
+      <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
+        
+      <p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p>
 
       <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" target="_blank" class="govuk-!-font-size-19">
          See other grants you may be eligible for.
