--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -17,9 +17,8 @@ productivity? {% endblock %} {% block beforeContent %}
           <br>
           <div class="govuk-body">
           <p class="govuk-caption-m">
-            Productivity is about how much is produced relative to<br> inputs (eg
-            increased yield for the same inputs or the same<br> yield with lower
-            inputs).
+            Productivity is about how much is produced relative to<br> inputs (for example increased yield for the same inputs or the same
+            yield with lower inputs).
           </p>
           <p class="govuk-caption-m">Select one or two options</p>
           </div>
