--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -31,7 +31,7 @@
           <label class="govuk-label" for="business-name">
               Business name
           </label>
-          <span id="business-name-hint" class="govuk-hint">Enter business name as held by the Rural Payments Agency</span>
+          <span id="business-name-hint" class="govuk-hint">If you’re registered on the Rural Payments system, enter business name as registered</span>
           <input class="govuk-input" id="business-name" name="business-name" type="text" value="{{ data['business-name'] }}">
         </div>
 
