--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -23,7 +23,7 @@
       Your project seems like it’s a strong fit with the funding priorities. Based on your answers, a grant application seems likely to be successful.</p>
     <p class="govuk-body"><span class="govuk-!-font-weight-bold">Average:</span>
       Your project seems like it’s an average fit with the funding priorities. Based on your answers, a grant application seems like it might be successful.</p>
-    <p class="govuk-body"><span class="govuk-!-font-weight-bold">Weak:</span>
+    <p class="govuk-body"><span class="govuk-!-font-weight-bold ">Weak:</span>
       Your project seems like it’s a weak fit with the funding priorities. Based on your answers, a grant application seems unlikely to be successful.</p>
   </div>
 </div>
@@ -32,7 +32,7 @@
   <div class="govuk-grid-column-full">
     <br>
     <h1 class="govuk-heading-l">Your answers</h1>
-    <p>You can go through the checker as many times as you like. Once you’re happy that your answers accurately reflect your project, add your contact details.</p>
+    <p class="govuk-!-padding-bottom-4">You can go back through the checker as many times as you like but you can only submit your details once.</p>
     <table class="govuk-table">
       <thead class="govuk-table__head">
           <tr class="govuk-table__row">
