change71/planning-permission

--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -46,7 +46,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="won’t have by 21 October 2021" {{ checked("planning-permission", "won’t have by 21 October 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Won't have by 31 December 2021
+                  Will not have by 31 December 2021
                 </label>
               </div>
             </div>
