change74/legal-status

--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -40,7 +40,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-3" name="legal-status" type="radio" value="Ltd company" {{ checked("legal-status", "Ltd company") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-3">
-                  Ltd company
+                  Limited company
                 </label>
               </div>
               <div class="govuk-radios__item">
@@ -121,7 +121,7 @@
                     <ul>
                       <li>Sole trader</li>
                       <li>Partnership</li>
-                      <li>Ltd company</li>
+                      <li>Limited company</li>
                       <li>Charity</li>
                       <li>Public organisation</li>
                       <li>Trust</li>
