change75/country-fail

--- a/app/views/current/views/water/country-fail.html
+++ b/app/views/current/views/water/country-fail.html
@@ -19,7 +19,7 @@
 
       <p>This is only for projects in England.</p>
 
-      <p>Scotland, Wales and Northern Ireland have similar grants available.</p>
+      <p>Scotland, Wales and Northern Ireland have other grants available.</p>
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
 
