change73/changed the url

--- a/app/views/current/views/water/welcome.html
+++ b/app/views/current/views/water/welcome.html
@@ -10,7 +10,7 @@
     Welcome
   </h1>
   <p class="govuk-body-l">
-    <a href="../guidance/large-water">Begin</a>
+    <a href="../guidance/water">Begin</a>
   </p>
 
 {% endblock %}
