--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -28,19 +28,19 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="irrigated-crops-1" name="irrigated-crops" type="radio" value="field-scale crops" {{ checked("irrigated-crops", "field-scale crops") }}>
                 <label class="govuk-label govuk-radios__label" for="irrigated-crops-1">
-                  Field-scale crops (eg potatoes, onions, carrots)
+                  Field-scale crops (for example potatoes, onions, carrots)
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="irrigated-crops-2" name="irrigated-crops" type="radio" value="protected cropping" {{ checked("irrigated-crops", "protected cropping") }}>
                 <label class="govuk-label govuk-radios__label" for="irrigated-crops-2">
-                  Protected cropping (eg glasshouse, poly tunnel)
+                  Protected cropping (for example glasshouse, poly tunnel)
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="irrigated-crops-3" name="irrigated-crops" type="radio" value="Fruit" {{ checked("irrigated-crops", "Fruit") }}>
                 <label class="govuk-label govuk-radios__label" for="irrigated-crops-3">
-                  Fruit (eg fruit, bush fruit)
+                  Fruit (for example fruit, bush fruit)
                 </label>
               </div>
               <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
