--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -28,14 +28,15 @@
           </p>
           </div>
           <div class="govuk-input__wrapper">
-          <input class="govuk-input govuk-!-width-one-quarter" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
+          <input class="govuk-input govuk-input--width-5" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
           <div class="govuk-input__suffix" aria-hidden="true">ha</div>
           </div>
         </div>
        
         <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="irrigated-land-current">
-            How much land will be irrigated per year after the project?
+          <h1 class="govuk-label-wrapper">
+            <label class="govuk-label govuk-label--l" for="irrigated-land-current">
+               How much land will be irrigated after the project?
             </label>
           </h1>
           <br>
@@ -46,7 +47,7 @@
           </p>
           </div>
           <div class="govuk-input__wrapper">
-            <input class="govuk-input govuk-!-width-one-quarter" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
+            <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
               <div class="govuk-input__suffix" aria-hidden="true">ha</div>
           </div>
           <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
