changed the content of all scoring pages

--- a/app/views/current/views/water/answers-high.html
+++ b/app/views/current/views/water/answers-high.html
@@ -20,11 +20,11 @@
     </div>
     <h1 class="govuk-heading-m">Scoring</h1>
     <p class="govuk-body"><span class="govuk-!-font-weight-bold">Strong:</span>
-      Your project seems like it’s a strong fit with the funding priorities. Based on your answers, a grant application seems likely to be successful.</p>
+       This means your project seems likely to be successful.  
     <p class="govuk-body"><span class="govuk-!-font-weight-bold">Average:</span>
-      Your project seems like it’s an average fit with the funding priorities. Based on your answers, a grant application seems like it might be successful.</p>
-    <p class="govuk-body"><span class="govuk-!-font-weight-bold">Weak:</span>
-      Your project seems like it’s a weak fit with the funding priorities. Based on your answers, a grant application seems unlikely to be successful.</p>
+        This means your project seems like it might be successful. 
+    <p class="govuk-body"><span class="govuk-!-font-weight-bold ">Weak:</span>
+        This means your project seems unlikely to be successful.
   </div>
 </div>
 
