--- a/app/views/current/views/water/consent.html
+++ b/app/views/current/views/water/consent.html
@@ -25,21 +25,13 @@
         <div class="govuk-checkboxes">
           <div class="govuk-checkboxes__item govuk-!-margin-top-7">
             <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="carcasses">
-            <label class="govuk-label govuk-checkboxes__label govuk-!-padding-bottom-5" for="confirm">
+            <label class="govuk-label govuk-checkboxes__label" for="confirm">
               I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application. 
-            </label>
-          </div>
-           <div class="govuk-checkboxes__item govuk-!-margin-top-4">
-            <input class="govuk-checkboxes__input" class="govuk-!-padding-bottom-6" id="confirm-2" name="confirmation" type="checkbox" value="mines">
-            <label class="govuk-label govuk-checkboxes__label govuk-!-padding-bottom-2" for="confirm-2">
-              So that we can continue to improve our services and schemes, we may wish to contact you in the future. 
-              Please confirm if you are happy for us, or a third-party working for us, to contact you. 
             </label>
           </div>
        </div>
       </fieldset>
     </div>
-
     <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
